# brain

./: .gitignore  .mcp.json  2026-02-02-this-session-is-being-continued-from-a-previous-co.txt  2026-02-03-this-session-is-being-continued-from-a-previous-co.txt  ACTIVE.md  CLAUDE.md  HOME.md  PHASE 2 COMPLETE - Ready for Implementation.md  RESEARCH_COMPLETE.md  RESEARCH_STAGE_3_SUMMARY.md  TASK-083-SUMMARY.md  VAULT RESTRUCTURE - START HERE.md
.beads/: issues.jsonl
.claude/: ralph-loop.local.md  settings.json
.obsidian/: app.json  appearance.json  graph.json
.omc/: ralplan-state.json
Dashboard/: Focus.md  State.md
agents/: architect.md  meta-worker.md  oracle.md  overnight.md  rules.md
context/: State.md  active-agent.md  (+16 more)
tools/mcps/claude-desktop-mcp/: README.md  cd_dump.html  debug_sidebar.py  debug_ui.py  debug_ui_simple.py  dump_html.py  pyproject.toml  server.py
tools/mcps/claude-desktop-mcp/.omc/autopilot/: plan.md  spec.md
tools/mcps/claude-desktop-mcp/.omc/sessions/: 554a7c96-ee69-4144-866d-73f559e59c73.json  f0fb7feb-9e3d-46a0-aa8c-1add77609071.json
tools/mcps/claude-desktop-mcp/.omc/state/checkpoints/: checkpoint-2026-02-05T12-05-07-495Z.json  checkpoint-2026-02-05T12-08-32-256Z.json  checkpoint-2026-02-05T21-06-47-227Z.json
tools/mcps/claude-desktop-mcp/bridge/: __init__.py  config.py  notify.py  processor.py  schema.py  watcher.py
tools/mcps/claude-desktop-mcp/scripts/: watch_queue.py
tools/mcps/claude-desktop-mcp/tests/: conftest.py  eval-s2-prompt.txt  run_orchestration_eval.sh  test_selectors.py  test_send_read.py  test_status.py
(+418 files in other folders)
